--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="windows-1252">
   <title>Kevin Meixner Demo JavaScript Application - Tic Tac Toe</title>
-  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
   <link rel="stylesheet" href="css/custom.css" />  
   <script>
   
